🐛 FIX: added little gap in menus and fix taskcard id

--- a/components/layout/nav/nav.module.css
+++ b/components/layout/nav/nav.module.css
@@ -61,12 +61,8 @@
   position: relative;
 }
 
-.requestBall {
-  height: 1.5rem;
-  width: 1.5rem;
-  background-color: var(--color-blue);
-  position: absolute;
-  right: 0;
-  top: 0;
-  border-radius: 50%;
+@media screen and (min-width: 770px) {
+  .menus {
+    gap: 2rem;
+  }
 }
